--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <header>
         <h1>Carlos Damian Garcia Bernal</h1>
     </header>
-    <section class="about">
+
+    <section class="sobre mi">
         <h2>Sobre mí</h2>
         <p>Soy Carlos Damian Garcia Bernal, estudiante de la carrera de Ingeniería en Software. Tengo 20 años y soy apasionado por los videojuegos. Me encanta aprender sobre nuevas tecnologías y mejorar mis habilidades en programación.</p>
     </section>
+
     <section class="hobbies">
         <h2>Mis Hobbies</h2>
         <ul>
@@ -23,8 +25,27 @@
             <li>Salir a caminar</li>
         </ul>
     </section>
+
+    <section class="favoritos">
+        <h2>Series o Películas Favoritas</h2>
+        <ul>
+            <li>Película: BobEsponja (2004) </li>
+            <li>Serie: Breaking Bad (2008-2013)  </li>
+            <li>Película: Interestelar (Interstellar) (2014) </li>
+        </ul>
+    </section>
+
+    <section class="contacto">
+        <h2>Contacto</h2>
+        <p>Puedes encontrarme en:</p>
+        <ul>
+            <li>Email: <a href="mailto:carlos.garcia@email.com">caarlosbernal13@gmail.com</a></li>
+        </ul>
+        <p>Visita también mi <a href="https://github.com/Gh0zTy1/" target="_blank">GitHub</a> para ver mis proyectos.</p>
+    </section>
+
     <footer>
-        <p>Visita mi <a href="https://github.com/Gh0zTy1/" target="_blank">GitHub</a></p>
+        <p>&copy; 2025 Carlos Damian Garcia Bernal. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
