--- a/index.html
+++ b/index.html
@@ -1,51 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
+<html lang="en"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Personal</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <title>My Personal Page</title> <link rel="stylesheet" href="styles.css"> </head>
 <body>
     <header>
-        <h1>Carlos Damian Garcia Bernal</h1>
-    </header>
+        <h1>Carlos Damian Garcia Bernal</h1> </header>
 
-    <section class="sobre mi">
-        <h2>Sobre mí</h2>
-        <p>Soy Carlos Damian Garcia Bernal, estudiante de la carrera de Ingeniería en Software. Tengo 20 años y soy apasionado por los videojuegos. Me encanta aprender sobre nuevas tecnologías y mejorar mis habilidades en programación.</p>
-    </section>
+    <section class="about">
+        <h2>About Me</h2> <p>I am Carlos Damian Garcia Bernal, a Software Engineering student. I am 20 years old and passionate about video games. I love learning about new technologies and improving my programming skills.</p> </section>
 
     <section class="hobbies">
-        <h2>Mis Hobbies</h2>
-        <ul>
-            <li>Cantar</li>
-            <li>Leer</li>
-            <li>Andar en bicicleta</li>
-            <li>Salir a caminar</li>
+        <h2>My Hobbies</h2> <ul>
+            <li>Singing</li> <li>Reading</li> <li>Cycling</li> <li>Walking</li> </ul>
+    </section>
+
+    <section class="favorites">
+        <h2>Favorite Series or Movies</h2> <ul>
+            <li>Movie: Inception (2010) - I love its complex plot and visual effects.</li>
+            <li>Series: Breaking Bad (2008-2013) - Incredible character development.</li>
+            <li>Movie: Interstellar (2014) - Fascinating for its focus on science and emotion.</li>
         </ul>
     </section>
 
-    <section class="favoritos">
-        <h2>Series o Películas Favoritas</h2>
+    <section class="contact">
+        <h2>Contact</h2> <p>You can find me at:</p>
         <ul>
-            <li>Película: BobEsponja (2004) </li>
-            <li>Serie: Breaking Bad (2008-2013)  </li>
-            <li>Película: Interestelar (Interstellar) (2014) </li>
+            <li>Email: <a href="mailto:carlos.garcia@example.com">carlos.garcia@example.com</a> (Replace with your actual email)</li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/your-profile/" target="_blank">My LinkedIn Profile</a> (Replace with your actual LinkedIn)</li>
         </ul>
-    </section>
-
-    <section class="contacto">
-        <h2>Contacto</h2>
-        <p>Puedes encontrarme en:</p>
-        <ul>
-            <li>Email: <a href="mailto:carlos.garcia@email.com">caarlosbernal13@gmail.com</a></li>
-        </ul>
-        <p>Visita también mi <a href="https://github.com/Gh0zTy1/" target="_blank">GitHub</a> para ver mis proyectos.</p>
-    </section>
+        <p>Also, visit my <a href="https://github.com/Gh0zTy1/" target="_blank">GitHub</a> to see my projects.</p> </section>
 
     <footer>
-        <p>&copy; 2025 Carlos Damian Garcia Bernal. Todos los derechos reservados.</p>
-    </footer>
+        <p>&copy; 2025 Carlos Damian Garcia Bernal. All rights reserved.</p> </footer>
 </body>
 </html>
